Add readme information

--- a/dev/k8s-java-application-chart.values.yaml
+++ b/dev/k8s-java-application-chart.values.yaml
@@ -1,7 +1,11 @@
-java_application_chart:
-  port: 3000
-  identity_key: testkey
-  image:
-    repository: ghcr.io/namnextx/k8s-java-application
-    pullPolicy: IfNotPresent
-    tag: dev-64ef8a1
+image:
+  repository: ghcr.io/namnextx/k8s-java-application
+  tag: dev-64ef8a1
+replicaNumber: 1
+
+deployment:
+  containerPort: 8080
+
+service:
+  type: ClusterIP
+  port: 80
